# ChangeLog for dev-cpp/libgnomecanvasmm
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgnomecanvasmm/ChangeLog,v 1.61 2008/04/11 22:55:12 remi Exp $

*libgnomecanvasmm-2.22.0 (11 Apr 2008)

  11 Apr 2008; Rémi Cardona <remi@gentoo.org>
  +libgnomecanvasmm-2.22.0.ebuild:
  Bump to 2.22.0 (upstream version bump, nothing new)

*libgnomecanvasmm-2.20.0 (03 Jan 2008)

  03 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libgnomecanvasmm-2.20.0.ebuild:
  bump to 2.20.0

  12 Oct 2007; Mart Raudsepp <leio@gentoo.org>
  -files/2.0.1-gcc3.4-after-cvs.patch, -files/2.0.1-gcc3.4-to-cvs.patch,
  -libgnomecanvasmm-2.0.1.ebuild, -libgnomecanvasmm-2.12.0.ebuild:
  Remove old versions and SLOT for bug 159995

  06 Oct 2007; Tom Gall <tgall@gentoo.org> libgnomecanvasmm-2.16.0.ebuild:
  stable on ppc64 bug #188838

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  Stable for HPPA (bug #188838).

  28 Aug 2007; nixnut <nixnut@gentoo.org> libgnomecanvasmm-2.16.0.ebuild:
  Stable on ppc wrt bug 188838

  27 Aug 2007; Christoph Mende <angelos@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  Stable on amd64 wrt bug #188838

  27 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  alpha/ia64 stable wrt #188838

  22 Aug 2007; Roy Marples <uberlord@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  Keyworded ~x86-fbsd.

  21 Aug 2007; Markus Ullmann <jokey@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  Stable on x86 wrt bug #188838

  14 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  Stable on sparc

  16 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  libgnomecanvasmm-2.16.0.ebuild:
  Fix QA issue with ROOT usage (bug #167271)

*libgnomecanvasmm-2.16.0 (11 Sep 2006)

  11 Sep 2006; John N. Laliberte <allanonjl@gentoo.org>
  +libgnomecanvasmm-2.16.0.ebuild:
  new version, add doc and examples use flags.
